# libecheck

./: .gitignore  COPYING  ChangeLog  Makefile  Makefile.1  Makefile.am  NEWS  README  TODO  configure.ac  echeck.c  echeck.h  echeck_impl.h  test-echeck.c
.github/workflows/: make-check.yml
echeck_arduino_demo/: echeck-arduino.cpp  echeck_arduino_demo.ino  eembed-hosted.h  eembed-io.cpp
echeck_tests_arduino/: echeck-arduino.h  echeck.cpp  echeck.h  echeck_tests_arduino.ino  eembed-arduino.cpp  eembed-assert.h  eembed-strcmp.cpp  eembed-strcpy.cpp  eembed-strlen.cpp  eembed-strstr.cpp  eembed.h  test-echeck-private-utils.cpp  test-echeck-private-utils.h  test-eembed-alloca-freea.cpp  test-eembed-float-to-str.cpp  test-eembed-log.cpp  test-eembed-memcmp.cpp  test-eembed-memcpy.cpp  test-eembed-memmove.cpp  test-eembed-memset.cpp  test-eembed-strcat.cpp  test-eembed-strcpy.cpp  test-eembed-strlen.cpp  test-eembed-ulong-to-str.cpp  test_check_byte_array.cpp  test_check_byte_array_m.cpp  test_check_byte_array_m2.cpp  test_check_char.cpp  test_check_char_m.cpp  test_check_double.cpp  test_check_int.cpp  test_check_int_m.cpp  test_check_long.cpp  test_check_long_m.cpp  test_check_ptr.cpp  test_check_ptr_m.cpp  test_check_ptr_not_null.cpp  test_check_size_t.cpp  test_check_size_t_m.cpp  test_check_status.cpp  (+7 more)
eembed_arduino_demo/: eembed_arduino_demo.ino
eembed_tests_arduino/: eembed-arduino.h  eembed.cpp  eembed_tests_arduino.ino  test-eembed-assert.cpp  test-eembed-chunk-alloc.cpp  test-eembed-chunk-realloc.cpp  test-eembed-delay-ms-u16.cpp  test-eembed-long-to-str.cpp  test-eembed-malloc-free.cpp  test-eembed-print.cpp  test-eembed-random-bytes.cpp  test-eembed-str-to-num.cpp  test-eembed-strstr.cpp  test-eembed-ulong-to-hex.cpp
misc/: boilerplate  pre-tidy.patch
src/: echeck-arduino.cpp  echeck-arduino.h  echeck-err-injecting-malloc.c  echeck-err-injecting-malloc.h  echeck.c  echeck.h  eembed-arduino.cpp  eembed-arduino.h  eembed-assert.h  eembed-hosted.h  eembed-io.c  eembed-malloc-free.c  eembed-memcmp.c  eembed-memcpy.c  eembed-memset.c  eembed-strcat.c  eembed-strcmp.c  eembed-strcpy.c  eembed-strlen.c  eembed-strstr.c  eembed-system-alloc.c  eembed.c  eembed.h
tests/: demo-eembed-static-assert.c  test-echeck-private-utils.c  test-echeck-private-utils.h  test-echeck.c  test-eembed-alloca-freea.c  test-eembed-assert.c  test-eembed-chunk-alloc.c  test-eembed-chunk-realloc.c  test-eembed-delay-ms-u16.c  test-eembed-float-fraction-to-str.c  test-eembed-float-to-str.c  test-eembed-log.c  test-eembed-long-to-str.c  test-eembed-malloc-free.c  test-eembed-memcmp.c  test-eembed-memcpy.c  test-eembed-memmove.c  test-eembed-memset.c  test-eembed-print.c  test-eembed-random-bytes-2.c  test-eembed-random-bytes-3.c  test-eembed-random-bytes.c  test-eembed-str-to-num.c  test-eembed-strcat.c  test-eembed-strcpy.c  test-eembed-strlen.c  test-eembed-strstr.c  test-eembed-ulong-to-hex.c  test-eembed-ulong-to-str.c  test_check_byte_array.c  test_check_byte_array_m.c  test_check_byte_array_m2.c  test_check_char.c  test_check_char_m.c  test_check_double.c  test_check_int.c  test_check_int_m.c  test_check_long.c  test_check_long_m.c  test_check_ptr.c  (+15 more)
